--- a/projects/GenDmgView/GenDmgView.vcxproj
+++ b/projects/GenDmgView/GenDmgView.vcxproj
@@ -26,12 +26,14 @@
     <ClCompile Include="..\..\src\GenDmgView\MainPanel.cpp" />
     <ClCompile Include="..\..\src\GenDmgView\QtAwesome.cpp" />
     <ClCompile Include="..\..\src\GenDmgView\QtAwesomeAnim.cpp" />
+    <ClCompile Include="..\..\src\GenDmgView\TitlePanel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\GenDmgView\AwesomeFontManager.h" />
     <ClInclude Include="..\..\include\GenDmgView\GenDmgApp.h" />
     <ClInclude Include="..\..\include\GenDmgView\MainFrame.h" />
     <ClInclude Include="..\..\include\GenDmgView\MainPanel.h" />
+    <ClInclude Include="..\..\include\GenDmgView\TitlePanel.h" />
     <QtMoc Include="..\..\include\GenDmgView\QtAwesomeAnim.h" />
     <QtMoc Include="..\..\include\GenDmgView\QtAwesome.h" />
     <ClInclude Include="..\..\include\GenDmgView\ViewLogger.h" />
