--- a/projects/GenDmgCore/GenDmgCore.vcxproj.filters
+++ b/projects/GenDmgCore/GenDmgCore.vcxproj.filters
@@ -47,7 +47,7 @@
     <ClCompile Include="..\..\src\GenDmgCore\DBHelper.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\CharacterBrief.cpp">
+    <ClCompile Include="..\..\src\GenDmgCore\CharacterBrief.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
