--- a/projects/GenDmgView/GenDmgView.vcxproj
+++ b/projects/GenDmgView/GenDmgView.vcxproj
@@ -30,19 +30,21 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\GenDmgView\AwesomeFontManager.h" />
-    <ClInclude Include="..\..\include\GenDmgView\GenDmgApp.h" />
-    <ClInclude Include="..\..\include\GenDmgView\MainFrame.h" />
-    <ClInclude Include="..\..\include\GenDmgView\MainPanel.h" />
-    <ClInclude Include="..\..\include\GenDmgView\TitlePanel.h" />
+    <QtMoc Include="..\..\include\GenDmgView\GenDmgApp.h" />
+    <QtMoc Include="..\..\include\GenDmgView\MainFrame.h" />
+    <QtMoc Include="..\..\include\GenDmgView\MainPanel.h" />
+    <QtMoc Include="..\..\include\GenDmgView\TitlePanel.h" />
     <QtMoc Include="..\..\include\GenDmgView\QtAwesomeAnim.h" />
     <QtMoc Include="..\..\include\GenDmgView\QtAwesome.h" />
     <ClInclude Include="..\..\include\GenDmgView\ViewLogger.h" />
   </ItemGroup>
   <ItemGroup>
-    <QtRcc Include="res\res.qrc" />
+    <None Include="res\qss\CommonStyle.qss" />
+    <None Include="res\ts\en.ts" />
+    <None Include="res\ts\zh.ts" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\qss\CommonStyle.qss" />
+    <QtRcc Include="res\res.qrc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B05359CB-532D-4F9A-B20E-FF0C7A6C296A}</ProjectGuid>
