add table header translate

--- a/projects/GenDmgView/GenDmgView.vcxproj
+++ b/projects/GenDmgView/GenDmgView.vcxproj
@@ -20,7 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\GenDmgView\AwesomeFontManager.cpp" />
+    <ClCompile Include="..\..\src\GenDmgView\CharacterBriefModel.cpp" />
     <ClCompile Include="..\..\src\GenDmgView\CharacterFrame.cpp" />
+    <ClCompile Include="..\..\src\GenDmgView\CharacterLvPropModel.cpp" />
     <ClCompile Include="..\..\src\GenDmgView\GenDmgApp.cpp" />
     <ClCompile Include="..\..\src\GenDmgView\main.cpp" />
     <ClCompile Include="..\..\src\GenDmgView\MainFrame.cpp" />
@@ -28,9 +30,13 @@
     <ClCompile Include="..\..\src\GenDmgView\QtAwesome.cpp" />
     <ClCompile Include="..\..\src\GenDmgView\QtAwesomeAnim.cpp" />
     <ClCompile Include="..\..\src\GenDmgView\TitlePanel.cpp" />
+    <ClCompile Include="..\..\src\GenDmgView\ViewI18n.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\GenDmgView\AwesomeFontManager.h" />
+    <QtMoc Include="..\..\include\GenDmgView\CharacterLvPropModel.h" />
+    <ClInclude Include="..\..\include\GenDmgView\ViewI18n.h" />
+    <QtMoc Include="..\..\include\GenDmgView\CharacterBriefModel.h" />
     <QtMoc Include="..\..\include\GenDmgView\CharacterFrame.h" />
     <QtMoc Include="..\..\include\GenDmgView\GenDmgApp.h" />
     <QtMoc Include="..\..\include\GenDmgView\MainFrame.h" />
