update character brief

--- a/projects/GenDmgView/GenDmgView.vcxproj
+++ b/projects/GenDmgView/GenDmgView.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\GenDmgView\AwesomeFontManager.cpp" />
+    <ClCompile Include="..\..\src\GenDmgView\CharacterBriefDelegate.cpp" />
+    <ClCompile Include="..\..\src\GenDmgView\CharacterBriefModel.cpp" />
     <ClCompile Include="..\..\src\GenDmgView\CharacterListModel.cpp" />
     <ClCompile Include="..\..\src\GenDmgView\CharacterFrame.cpp" />
     <ClCompile Include="..\..\src\GenDmgView\CharacterLvPropDelegate.cpp" />
@@ -37,6 +39,8 @@
     <ClInclude Include="..\..\include\GenDmgView\AwesomeFontManager.h" />
     <QtMoc Include="..\..\include\GenDmgView\CharacterLvPropModel.h" />
     <QtMoc Include="..\..\include\GenDmgView\CharacterLvPropDelegate.h" />
+    <QtMoc Include="..\..\include\GenDmgView\CharacterBriefModel.h" />
+    <QtMoc Include="..\..\include\GenDmgView\CharacterBriefDelegate.h" />
     <ClInclude Include="..\..\include\GenDmgView\ViewI18n.h" />
     <QtMoc Include="..\..\include\GenDmgView\CharacterListModel.h" />
     <QtMoc Include="..\..\include\GenDmgView\CharacterFrame.h" />
