--- a/projects/GenDmgCore/GenDmgCore.vcxproj
+++ b/projects/GenDmgCore/GenDmgCore.vcxproj
@@ -101,8 +101,7 @@
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>XCOPY $(BinDir)* $(DeployDir) /s /d /y
-XCOPY $(SolutionDir)lib\sqlite3\sqlite3.dll $(DeployDir) /s /d /y</Command>
+      <Command>XCOPY $(BinDir)* $(DeployDir) /s /d /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -125,8 +124,7 @@ XCOPY $(SolutionDir)lib\sqlite3\sqlite3.dll $(DeployDir) /s /d /y</Command>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>XCOPY $(BinDir)* $(DeployDir) /s /d /y
-XCOPY $(SolutionDir)lib\sqlite3\sqlite3.dll $(DeployDir) /s /d /y</Command>
+      <Command>XCOPY $(BinDir)* $(DeployDir) /s /d /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -144,8 +142,7 @@ XCOPY $(SolutionDir)lib\sqlite3\sqlite3.dll $(DeployDir) /s /d /y</Command>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>XCOPY $(BinDir)* $(DeployDir) /s /d /y
-XCOPY $(SolutionDir)lib\sqlite3\sqlite3.dll $(DeployDir) /s /d /y</Command>
+      <Command>XCOPY $(BinDir)* $(DeployDir) /s /d /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -168,8 +165,7 @@ XCOPY $(SolutionDir)lib\sqlite3\sqlite3.dll $(DeployDir) /s /d /y</Command>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>XCOPY $(BinDir)* $(DeployDir) /s /d /y
-XCOPY $(SolutionDir)lib\sqlite3\sqlite3.dll $(DeployDir) /s /d /y</Command>
+      <Command>XCOPY $(BinDir)* $(DeployDir) /s /d /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
