--- a/projects/GenDmgView/GenDmgView.vcxproj.filters
+++ b/projects/GenDmgView/GenDmgView.vcxproj.filters
@@ -76,6 +76,15 @@
     <ClCompile Include="..\..\src\GenDmgView\CharacterBriefDelegate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\GenDmgView\GrowRateFrame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\GenDmgView\WidgetUtil.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\GenDmgView\GrowRateModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\GenDmgView\ViewLogger.h">
@@ -85,6 +94,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\GenDmgView\ViewI18n.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\GenDmgView\WidgetUtil.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -134,6 +146,12 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="..\..\include\GenDmgView\CharacterBriefDelegate.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="..\..\include\GenDmgView\GrowRateFrame.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="..\..\include\GenDmgView\GrowRateModel.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
